--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,7 @@ $ochiqKulrang: #8C8C8C;
 }
 
 .header {
-    background: #FFFFFF;
+    background: white;
     box-shadow: 0px -1px 0px 0px #C4CDD5 inset;
     position: fixed;
     width: 100%;
