--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 }
 
 .header {
-  background: #FFFFFF;
+  background: white;
   box-shadow: 0px -1px 0px 0px #C4CDD5 inset;
   position: fixed;
   width: 100%;
